...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.CreateAddEventDetails"
    android:id="@+id/createAddEventDetails">


    <include
        layout="@layout/toolbar"
        android:id="@+id/addEventToolBar1"
        android:layout_width="match_parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addEventToolBar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainbar">
...
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Event Name"
                        android:textColor="@color/OnSurface"
                        tools:layout_editor_absoluteX="30dp"
                        tools:layout_editor_absoluteY="78dp"
...
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/button_background"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_calendar" />

                        <TextView
                            android:id="@+id/eventDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="5"
                            android:textColorHint="@color/OnSurface"
                            android:textColor="@color/OnSurface"
...
                            android:background="@drawable/button_background"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_clock">
                        </ImageButton>

                        <TextView
                            android:id="@+id/eventTimeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="5"
                            android:gravity="center_horizontal"
                            android:hint="Event Time"
...
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventLocationText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_location"
                        android:textColor="@color/OnSurface"
                        tools:layout_editor_absoluteX="30dp"
                        tools:layout_editor_absoluteY="78dp"
...
                        android:paddingStart="30dp">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Switch
                android:id="@+id/checkInSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:switchPadding="20dp"
                android:text="@string/check_in_location_verification"
                android:textColor="@color/OnSurface"
...
                app:boxCornerRadiusBottomEnd="30dp"
                app:layout_constraintTop_toBottomOf="@id/checkInSwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tempPosterCard">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numOfAttendeeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Event size (leave blank for no limit)"
                    android:textColor="@color/OnSurface"
                    android:textSize="13dp"
                    android:gravity="center_horizontal"
...
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Event Description (Optional)"
                    android:textColor="@color/OnSurface"
                    android:textStyle="italic"
                    android:gravity="center_horizontal"
...
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Secondary"
        android:drawableEnd="@drawable/arrowresized"
        android:drawableTint="@color/OnSurface"
...
