<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/genertaeQrCodeActivity"
    tools:context=".Event.CreateAddEventDetails">

    <include
        android:id="@+id/addEventToolBar2"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/mainbar"
        layout="@layout/mainappbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/mainbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addEventToolBar2"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/firstBox"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/SurfaceContainer">

            <ImageView
                android:id="@+id/ivCheckInQR"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:visibility="gone">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGenCheckInQR"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Secondary"
                android:text="Generate check-in QRCode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:padding="10dp"
                android:text="or"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/btnUploadCheckInQR"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Secondary"
                android:text="Upload from Camera Roll" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/secondBox"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/SurfaceContainer">

            <ImageView
                android:id="@+id/ivPromoQr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGenPromoQR"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Secondary"
                android:textStyle="italic"
                android:text="Generate Promotional QRCode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="(Optional)" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Secondary"
        android:drawableTint="@color/White"
        android:text="Finish"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/mainbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
